--- a/TareaPeticion/Info.plist
+++ b/TareaPeticion/Info.plist
@@ -36,5 +36,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <!--Peticion al servidor -->
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <!--Permite todas las conexiones (cuidado) -->
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
